--- a/app.json
+++ b/app.json
@@ -1,10 +1,20 @@
 {
-  "name": "App",
-  "displayName": "App",
+  "name": "Ifood",
+  "displayName": "Ifood",
   "expo": {
-    "name": "App",
-    "slug": "App",
+    "name": "Ifood",
+    "slug": "Ifood",
     "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#F0001A"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
     "assetBundlePatterns": [
       "**/*"
     ]
